--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^5.2.1",
-    "mongoose": "^9.0.2",
-    "dotenv": "^16.3.1"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
